Fix registration table overflow issue - Registration table broke broke page layout and made screen width too wide

--- a/src/domain/registrations/registrationList/registrationList.module.scss
+++ b/src/domain/registrations/registrationList/registrationList.module.scss
@@ -4,6 +4,7 @@
 }
 
 .tableWrapper {
+  display: grid;
   margin-top: calc(0px - var(--spacing-2-xl) - 2px);
 }
 
